--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=bookmanagement
 #spring.datasource.username=root
 #spring.datasource.password=Musa!1994
 
-#spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/bookdb}
-#spring.datasource.username=${DB_USER:root}
-#spring.datasource.password=${DB_PASSWORD:Musa!1994}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/bookdb}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:Musa!1994}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
